navbar change 'a' element

--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -26,7 +26,7 @@ a {
 }
 
 #cotiza {
-	height: auto;
+	height: 100vh;
 }
 
 #productos, #cotiza {
@@ -41,9 +41,8 @@ a {
 .home-box {
 	width: 90%;
 	margin: 0 auto;
-	padding-top: 1rem;
-    padding-bottom: 1rem;
-    line-height: 100%;
+	padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 .home-subtitle {
