update ids sections

--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -32,9 +32,9 @@ a {
 #productos, #cotiza {
 	background-color: $bg-grey;
 }
-#productos, #elegir, #cotiza, #estudios {
+#productos, #options, #cotiza, #estudios {
 	padding-top: 3rem;
-	padding-bottom: 2rem;
+	padding-bottom: 3rem;
 }
 
 .home-icons {width: 50px;}
