--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -115,7 +115,7 @@ a {
 
 /* Cotiza */
 
-#cotiza-300 {
+#cotizaopt1 {
 	padding-top: 2rem;
 
 	.cotiza-box-300 {
@@ -126,6 +126,15 @@ a {
 
 		.number {
 			font-weight: bold;
+			position: relative;
+
+			span:nth-child(1){
+				position: absolute;
+				top: 15px;
+				left: 50%;
+				margin-left: -70px;
+				font-size: 22px;
+			}
 
 			span:nth-child(2) {
 				font-size: 50px;
@@ -136,11 +145,10 @@ a {
 	.cotiza-300-text-box {
 		padding-bottom: 1rem;
 		padding-top: 1rem;
-
 	}
 }
 
-#cotiza-personal {
+#cotizaopt2 {
 	padding-top: 3rem;
 
 	.cotiza-personal-title {
@@ -150,6 +158,10 @@ a {
 	    width: 280px;
 	    margin: 0 auto;
 	    line-height: 130%;
+	}
+
+	form.home-form .input-field input{
+		margin-bottom: 10px;
 	}
 
 }
