--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -8,6 +8,7 @@ body{
 	background-color: #FFF;
 	color: $general-color;
 	overflow-x: hidden;
+	font-family: 'Lato', sans-serif;
 }
 a {
 	color: $general-color;
