--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import "materialize";
 
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 /************************/
 
 @import "common/colors";
