--- a/resources/assets/sass/layout/afiliacion.scss
+++ b/resources/assets/sass/layout/afiliacion.scss
@@ -26,4 +26,13 @@
 		color: #5d5b5b;
 		width: 20px;
 	}
+	select {
+		background-color: transparent;
+		width: 100%;
+		padding: 5px;
+		border: none;
+		border-radius: 2px;
+		height: 3rem;
+		border-bottom: 1px solid #9e9e9e;
+	}
 }
