add fix form afiliate

--- a/resources/assets/sass/common/colors.scss
+++ b/resources/assets/sass/common/colors.scss
@@ -1,4 +1,8 @@
-$bg-grey: #f5f3f3;
-$general-color: #5d5b5b;
-$btn-1: #252525;
-$btn-2: #727272;
+/*** Colors Dá **/
+
+$violet: #27073A;
+$cyan: #51F6FF;
+$orange: #FF5D00;
+$violet-light: #5520B2;
+$grey: #F0F0F0;
+$white: #FFFFFF;
