--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -12,30 +12,22 @@
 
 .layout-body {
 	padding-top: 3rem;
-	padding-bottom: 2rem;
+	padding-bottom: 3rem;
 }
 
 .bg-grey {
-	background-color: $bg-grey;
+	background-color: $grey;
 }
 
 .layout-text {
-	font-size: 16px;
+	font-size: 14px;
 	margin-bottom: 15px;
 	margin-top: 15px;
-}
-
-.layout-subtitles {
-	font-size: 20px;
-    font-weight: bold;
-    margin-top: 10px;
-    line-height: 130%;
 }
 
 .layout-box {
 	padding-bottom: 2rem;
 	padding-top: 2rem;
-	margin-bottom: 1rem;
 	margin-top: 1rem;
 }
 
@@ -128,7 +120,7 @@
 		width: 100px;
 		height: 100px;
 		border-radius: 50%;
-		background-color: $bg-grey;
+		background-color: $grey;
 		margin: 0 auto;
 	}
 	.about-perfil-text {
