--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -7,6 +7,7 @@
 		justify-content: center;
 		padding-top: 2rem;
 		padding-bottom: 2rem;
+		color: $violet;
 	}
 }
 
@@ -23,6 +24,7 @@
 	font-size: 14px;
 	margin-bottom: 15px;
 	margin-top: 15px;
+	color: $violet;
 }
 
 .layout-box {
@@ -32,8 +34,8 @@
 }
 
 .layout-btn-box {
-	margin-top: 5rem;
-    margin-bottom: 2rem;
+	margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 /** Reconocimiento **/
@@ -44,7 +46,7 @@
 
 .circle-option {
 	border-radius: 50%;
-	border: 2px solid #787878;
+	border: 2px solid $violet;
 	width: 50px;
 	height: 50px;
 	display: flex;
@@ -52,7 +54,9 @@
     align-content: center;
     flex-direction: column;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    color: $violet;
 }
 
 /** Beneficios **/
@@ -91,7 +95,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				color: #ffffff;
+				color: $white;
 
 				margin-left: 10px;
 				margin-right: 10px;
@@ -117,8 +121,8 @@
 	padding-top: 1rem;
 
 	.about-perfil-pic {
-		width: 100px;
-		height: 100px;
+		width: 110px;
+		height: 110px;
 		border-radius: 50%;
 		background-color: $grey;
 		margin: 0 auto;
@@ -126,6 +130,10 @@
 	.about-perfil-text {
 		margin-top: 2rem;
 		margin-bottom: 2rem;
+		color: $violet;
+		p:first-of-type{
+			font-weight: bold;
+		}
 	}
 }
 
