--- a/resources/assets/css/da-icons.css
+++ b/resources/assets/css/da-icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/da-icons/icomoon.eot?x03imd');
-  src:  url('../fonts/da-icons/icomoon.eot?x03imd#iefix') format('embedded-opentype'),
-    url('../fonts/da-icons/icomoon.ttf?x03imd') format('truetype'),
-    url('../fonts/da-icons/icomoon.woff?x03imd') format('woff'),
-    url('../fonts/da-icons/icomoon.svg?x03imd#icomoon') format('svg');
+  src:  url('../fonts/da-icons/icomoon.eot?gmnmw5');
+  src:  url('../fonts/da-icons/icomoon.eot?gmnmw5#iefix') format('embedded-opentype'),
+    url('../fonts/da-icons/icomoon.ttf?gmnmw5') format('truetype'),
+    url('../fonts/da-icons/icomoon.woff?gmnmw5') format('woff'),
+    url('../fonts/da-icons/icomoon.svg?gmnmw5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.da_ico_puzzle:before {
+  content: "\e910";
+  color: #ffffff;
+}
 .da_ico_alert:before {
   content: "\e900";
   color: #27073a;
@@ -50,16 +54,16 @@
 }
 .da_ico_happy .path1:before {
   content: "\e906";
-  color: rgb(240, 243, 245);
+  color: transparent;
 }
 .da_ico_happy .path2:before {
   content: "\e907";
   margin-left: -1em;
-  color: rgb(39, 7, 58);
+  color: rgb(255,255,255);
 }
 .da_ico_idea:before {
   content: "\e908";
-  color: #27073a;
+  color: #ffffff;
 }
 .da_ico_measuring:before {
   content: "\e909";
@@ -71,7 +75,7 @@
 }
 .da_ico_productivity:before {
   content: "\e90b";
-  color: #27073a;
+  color: #ffffff;
 }
 .da_ico_recognition:before {
   content: "\e90c";
@@ -83,7 +87,7 @@
 }
 .da_ico_workers:before {
   content: "\e90e";
-  color: #27073a;
+  color: #ffffff;
 }
 .da_logo_da:before {
   content: "\e90f";
