--- a/resources/assets/sass/common/varios.scss
+++ b/resources/assets/sass/common/varios.scss
@@ -22,6 +22,7 @@
     letter-spacing: 0px;
     &:hover {
         background-color: $cyan;
+        box-shadow: none;
     }
 }
 .btn-violet{
@@ -30,6 +31,7 @@
     font-weight: bold;
     &:hover {
         background-color: $violet;
+        box-shadow: none;
     }
 }
 .btn-flat {
@@ -42,25 +44,8 @@
     }
 }
 
-.title-home {
-    font-size: 24px;
-    line-height: 28px;
-
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
-.titles {
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: bold;
-
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
-
-.text-orange {
-    color: $orange;
-}
-.text-violet {
-    color: $violet;
+@media (min-width: 992px) {
+    .btn-da {
+        width: 300px;
+    }
 }
