--- a/resources/assets/sass/common/varios.scss
+++ b/resources/assets/sass/common/varios.scss
@@ -43,9 +43,15 @@
         color: $white;
     }
 }
+.d-none {
+    display: block;
+}
 
 @media (min-width: 992px) {
     .btn-da {
         width: 300px;
+    }
+    .d-none {
+        display: none;
     }
 }
