--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -26,6 +26,7 @@ a {
 	margin-bottom: 30px;
 }
 .titles {
+	font-family: 'acherus_grotesqueregular';
     font-size: 24px;
     line-height: 28px;
 
