--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -38,6 +38,7 @@
 .layout-btn-box {
 	margin-top: 2rem;
     margin-bottom: 1rem;
+    justify-content: center;
 }
 
 /** Reconocimiento **/
@@ -49,14 +50,14 @@
 .circle-option {
 	border-radius: 50%;
 	border: 2px solid $violet;
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     margin: 0 auto;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: bold;
     color: $violet;
 }
